Update LaTeX files structure, cleanup main.tex, add template for all vulnerabilities

--- a/latex/Réseau/network.tex
+++ b/latex/Réseau/network.tex
@@ -1,10 +1,56 @@
-\chapter{Network vulnerabilities}
+%%%
+ % File:     network.tex
+ % Author:   Hackademics Forum <hackademicsforum6@gmail.com>
+ % Project:  MindMap des vulnérabilités
+ % Released: 03/08/2016
+%%%
 
-\section{Dos}
+%!TeX root = main.tex
+%!TeX encoding = UTF-8
+%!TeX program = pdflatex
+%!TeX spellcheck = fr_FR
 
-Intro
+%%%
+ % Vulnérabilités réseau
+%%%
+\chapter{Vulnérabilités réseau}\label{vulnerabilites:reseau}
 
+Intro vulnérabilités réseau
 
-\section{DDOS}
+\section{Usurpation (Spoofing)}\label{vulnerabilites:reseau:spoofing}
 
-This part does not have sub-sections
+Intro vulnérabilités spoofing
+
+\subsection{IP Spoofing}\label{vulnerabilites:reseau:spoofing:ip}
+
+...
+
+\subsection{ARP Spoofing}\label{vulnerabilites:reseau:spoofing:arp}
+
+...
+
+\subsection{MAC Spoofing}\label{vulnerabilites:reseau:spoofing:mac}
+
+...
+
+\subsection{DNS Spoofing}\label{vulnerabilites:reseau:spoofing:dns}
+
+...
+
+\section{Rejeu (Replay / Playback)}\label{vulnerabilites:reseau:replay}
+
+Intro vulnérabilités replay
+
+\section{Déni de service (distribué) (DoS / DDoS) }\label{vulnerabilites:reseau:dos}
+
+Intro vulnérabilités DoS / DDoS
+
+\subsection{Advanced persistent DoS (APDoS)}\label{vulnerabilites:reseau:dos:apdos}
+
+...
+
+\subsection{DoS réflechi (Reflected / Spoofed)}\label{vulnerabilites:reseau:dos:reflected}
+
+...
+
+\endinput
