--- a/latex/Web/web.tex
+++ b/latex/Web/web.tex
@@ -1,15 +1,52 @@
-\chapter{Web vulnerabilities}
+%%%
+ % File:     web.tex
+ % Author:   Hackademics Forum <hackademicsforum6@gmail.com>
+ % Project:  MindMap des vulnérabilités
+ % Released: 03/08/2016
+%%%
 
-\section{XSS vuln}
+%!TeX root = main.tex
+%!TeX encoding = UTF-8
+%!TeX program = pdflatex
+%!TeX spellcheck = fr_FR
 
-Intro
+%%%
+ % Vulnérabilités WEB
+%%%
+\chapter{Vulnérabilités WEB}\label{vulnerabilites:web}
 
-\subsection{Reflected XSS}
+Intro vulnérabilités WEB
 
+\section{Structured Query Language Injection (SQLi)}\label{vulnerabilites:web:sqli}
 
-\subsection{Simple XSS}
+Intro vulnérabilités SQLi
 
+\subsection{SQLi Simple}\label{vulnerabilites:web:sqli:simple}
 
-\section{SQLi}
+...
 
-This part does not have sub-sections
+\subsection{SQLi à l'aveugle (Blind)}\label{vulnerabilites:web:sqli:blind}
+
+...
+
+\section{Cross-Site Scripting (XSS)}\label{vulnerabilites:web:xss}
+
+Intro vulnérabilités XSS
+
+\subsection{XSS local (DOM Based)}\label{vulnerabilites:web:xss:dom}
+
+...
+
+\subsection{XSS stocké (Stored)}\label{vulnerabilites:web:xss:stored}
+
+...
+
+\subsection{XSS réfléchi (Reflected)}\label{vulnerabilites:web:xss:reflected}
+
+...
+
+\section{Cross-Site Request Forgery (CSRF / XSRF)}\label{vulnerabilites:web:csrf}
+
+Intro vulnérabilités CSRF
+
+\endinput
