Split vulnerabilities into sub-files

--- a/latex/Applicatives/application.tex
+++ b/latex/Applicatives/application.tex
@@ -17,16 +17,9 @@
 
 Intro vulnérabilités applicatives
 
-\section{Dépassement de tampon (Buffer Overflow)}\label{vulnerabilites:applicatives:buffer-overflow}
-
-Intro vulnérabilités buffer overflow
-
-\subsection{Stack Overflow}\label{vulnerabilites:applicatives:buffer-overflow:stack}
-
-...
-
-\subsection{Heap Overflow}\label{vulnerabilites:applicatives:buffer-overflow:heap}
-
-...
+%%%
+ % Inclusion des sections
+%%%
+\input{Applicatives/buffer_overflow}
 
 \endinput
