--- a/latex/Réseau/network.tex
+++ b/latex/Réseau/network.tex
@@ -17,40 +17,11 @@
 
 Intro vulnérabilités réseau
 
-\section{Usurpation (Spoofing)}\label{vulnerabilites:reseau:spoofing}
-
-Intro vulnérabilités spoofing
-
-\subsection{IP Spoofing}\label{vulnerabilites:reseau:spoofing:ip}
-
-...
-
-\subsection{ARP Spoofing}\label{vulnerabilites:reseau:spoofing:arp}
-
-...
-
-\subsection{MAC Spoofing}\label{vulnerabilites:reseau:spoofing:mac}
-
-...
-
-\subsection{DNS Spoofing}\label{vulnerabilites:reseau:spoofing:dns}
-
-...
-
-\section{Rejeu (Replay / Playback)}\label{vulnerabilites:reseau:replay}
-
-Intro vulnérabilités replay
-
-\section{Déni de service (distribué) (DoS / DDoS) }\label{vulnerabilites:reseau:dos}
-
-Intro vulnérabilités DoS / DDoS
-
-\subsection{Advanced persistent DoS (APDoS)}\label{vulnerabilites:reseau:dos:apdos}
-
-...
-
-\subsection{DoS réflechi (Reflected / Spoofed)}\label{vulnerabilites:reseau:dos:reflected}
-
-...
+%%%
+ % Inclusion des sections
+%%%
+\input{Réseau/spoofing}
+\input{Réseau/replay}
+\input{Réseau/dos}
 
 \endinput
