--- a/latex/Web/web.tex
+++ b/latex/Web/web.tex
@@ -17,36 +17,11 @@
 
 Intro vulnérabilités WEB
 
-\section{Structured Query Language Injection (SQLi)}\label{vulnerabilites:web:sqli}
-
-Intro vulnérabilités SQLi
-
-\subsection{SQLi Simple}\label{vulnerabilites:web:sqli:simple}
-
-...
-
-\subsection{SQLi à l'aveugle (Blind)}\label{vulnerabilites:web:sqli:blind}
-
-...
-
-\section{Cross-Site Scripting (XSS)}\label{vulnerabilites:web:xss}
-
-Intro vulnérabilités XSS
-
-\subsection{XSS local (DOM Based)}\label{vulnerabilites:web:xss:dom}
-
-...
-
-\subsection{XSS stocké (Stored)}\label{vulnerabilites:web:xss:stored}
-
-...
-
-\subsection{XSS réfléchi (Reflected)}\label{vulnerabilites:web:xss:reflected}
-
-...
-
-\section{Cross-Site Request Forgery (CSRF / XSRF)}\label{vulnerabilites:web:csrf}
-
-Intro vulnérabilités CSRF
+%%%
+ % Inclusion des sections
+%%%
+\input{Web/sqli}
+\input{Web/xss}
+\input{Web/csrf}
 
 \endinput
