--- a/latex/Réseau/replay.tex
+++ b/latex/Réseau/replay.tex
@@ -1,5 +1,5 @@
 %%%
- % File:     physical.tex
+ % File:     replay.tex
  % Author:   Hackademics Forum <hackademicsforum6@gmail.com>
  % Project:  MindMap des vulnérabilités
  % Released: 03/08/2016
@@ -11,15 +11,10 @@
 %!TeX spellcheck = fr_FR
 
 %%%
- % Vulnérabilités physiques
+ % Vulnérabilités Replay
 %%%
-\chapter{Vulnérabilités physiques}\label{vulnerabilites:physiques}
+\section{Rejeu (Replay / Playback)}\label{vulnerabilites:reseau:replay}
 
-Intro vulnérabilités physiques
-
-%%%
- % Inclusion des sections
-%%%
-\input{Physiques/wifi}
+Intro vulnérabilités replay
 
 \endinput
