--- a/latex/Web/xss.tex
+++ b/latex/Web/xss.tex
@@ -84,7 +84,50 @@ Voilà j'ai simplement recrée un popup qui affiche en clair les informations (i
 
 \subsection{XSS stocké (Stored)}\label{vulnerabilites:web:xss:stored}
 
-...
+Le XSS STOCKE (STORED) est la faille XSS la plus dommageable. Les attaques de TYPE-1 impliquent qu'un pirate injecte un script qui sera stocké de façon permanente (par exemple dans une base de données). Un exemple assez classique de XSS de TYPE-1 est l'injection d'un script malveillant par un pirate dans un champ de commentaires sur un blog ou un post dans un forum.
+
+\begin{flushleft}
+Voici un exemple de l'exploitation de faille XSS de TYPE-1. Pour rester dans la légalité j'utilise WEBGOAT pour illustrer cette injection.
+\end{flushleft}
+
+\bigskip
+
+\begin{itemize}
+\item Hackademics
+\item <script>alert(«HACKADEMICS»);</script>
+\end{itemize}
+
+\bigskip
+
+\begin{figure}[hbtp]
+\caption{XSS TYPE-1}
+\centering
+\includegraphics[scale=0.3]{Web/assets/xsst1-0.png}
+\end{figure}
+
+\begin{flushleft}
+En copiant ce texte dans le champ TITRE, le script dans le champ MESSAGE et  en cliquant sur SUBMIT on utilise la faille XSS de TYPE-1 pour afficher et stocker le tout dans site web. En cliquant sur ce message on exploitera cette faille. Voyons ce qui se passe.
+\end{flushleft}
+
+\begin{figure}[hbtp]
+\caption{XSS TYPE-1}
+\centering
+\includegraphics[scale=0.3]{Web/assets/xsst1-1.png}
+\end{figure}
+
+\bigskip
+
+\begin{flushleft}
+On voit clairement dans la liste des messages qu'un message à été posté par Hackademics. Soyons curieux et cliquons dessus pour voire ce qui se passe.
+\end{flushleft}
+
+\bigskip
+
+\begin{figure}[hbtp]
+\caption{XSS TYPE-1}
+\centering
+\includegraphics[scale=0.3]{Web/assets/xsst1-2.png}
+\end{figure}
 
 \subsection{XSS réfléchi (Reflected)}\label{vulnerabilites:web:xss:reflected}
 
