--- a/latex/Web/xss.tex
+++ b/latex/Web/xss.tex
@@ -51,10 +51,14 @@ Voici un exemple de l'exploitation de faille XSS de TYPE-0 pour afficher un simp
 En copiant ce code dans la barre de recherche et ensuite en cliquant sur search on utilise la faille XSS de TYPE-0 pour simplement afficher le message "XSS TYPE-0"
 \end{flushleft}
 
+
+
 \begin{center}
 \caption{XSS TYPE-0}
 \includegraphics[scale=0.3]{Web/assets/XSS0.png}
 \end{center}
+
+\bigskip
 
 \begin{flushleft}
 Un autre exemple de l'exploitation de faille XSS de TYPE-0 pour cette fois changer l'apparence de la page en ajoutant deux cases à remplir avec un identifiant et un mot de passe dans le but de voler ces informations.
@@ -92,40 +96,25 @@ Voici un exemple de l'exploitation de faille XSS de TYPE-1. Pour rester dans la 
 
 \begin{itemize}
 \item Hackademics
-\item <script>alert(«HACKADEMICS»);</script>
+\item <script>alert("HACKADEMICS");</script>
 \end{itemize}
 
-\bigskip
 
-<<<<<<< HEAD
-\begin{figure}[hbtp]
-\caption{XSS TYPE-1}
-\centering
-\includegraphics[scale=0.3]{Web/assets/xsst1-0.png}
-\end{figure}
-=======
 \begin{center}
 \caption{XSS TYPE-1}
 \includegraphics[scale=0.3]{Web/assets/xsst1-0.png}
 \end{center}
->>>>>>> 17595d94a9dc5e3ddbae9ca844b7a48e76cd1543
+
 
 \begin{flushleft}
 En copiant ce texte dans le champ TITRE, le script dans le champ MESSAGE et  en cliquant sur SUBMIT on utilise la faille XSS de TYPE-1 pour afficher et stocker le tout dans site web. En cliquant sur ce message on exploitera cette faille. Voyons ce qui se passe.
 \end{flushleft}
 
-<<<<<<< HEAD
-\begin{figure}[hbtp]
-\caption{XSS TYPE-1}
-\centering
-\includegraphics[scale=0.3]{Web/assets/xsst1-1.png}
-\end{figure}
-=======
+
 \begin{center}
 \caption{XSS TYPE-1}
 \includegraphics[scale=0.3]{Web/assets/xsst1-1.png}
 \end{center}
->>>>>>> 17595d94a9dc5e3ddbae9ca844b7a48e76cd1543
 
 \bigskip
 
@@ -133,20 +122,59 @@ En copiant ce texte dans le champ TITRE, le script dans le champ MESSAGE et  en 
 On voit clairement dans la liste des messages qu'un message à été posté par Hackademics. Soyons curieux et cliquons dessus pour voire ce qui se passe.
 \end{flushleft}
 
-\bigskip
 
-<<<<<<< HEAD
-\begin{figure}[hbtp]
-\caption{XSS TYPE-1}
-\centering
-\includegraphics[scale=0.3]{Web/assets/xsst1-2.png}
-\end{figure}
-=======
 \begin{center}
 \caption{XSS TYPE-1}
 \includegraphics[scale=0.3]{Web/assets/xsst1-2.png}
 \end{center}
->>>>>>> 17595d94a9dc5e3ddbae9ca844b7a48e76cd1543
+
+\bigskip
+
+\begin{flushleft}
+On voit qu'en cliquant sur le message pour voire son contenu , le script malveillant est activé pour afficher un simple popup avec le message "HACKADEMICS"
+
+\bigskip
+
+Voyons maintenant un deuxième exemple ou on va exploiter une faille XSS de TYPE-1 cette fois on utilisera le code injecté pour faire une redirection. Pour l'exemple on va rediriger sur le forum  hackademics.fr, mais on peut très bien imaginer une redirection vers un site contrefait pour tenter de soutirer des informations confidentielles.
+\end{flushleft}
+
+\bigskip
+
+\begin{itemize}
+\item Connectez-Vous
+\item <script>document.location.href="http://www.hackademics.fr"</script>
+\end{itemize}
+
+
+\begin{center}
+\caption{XSS TYPE-1}
+\includegraphics[scale=0.3]{Web/assets/xsst100.png}
+\end{center}
+
+\bigskip
+
+\begin{flushleft}
+Nous allons créer un nouveau post ou sera injecté notre nouveau code. Le code injecté grâce a cette faille XSS STOCKE crée une redirection vers le forum « hackademics.fr »
+\end{flushleft}
+
+
+\begin{center}
+\caption{XSS TYPE-1}
+\includegraphics[scale=0.3]{Web/assets/xsst101.png}
+\end{center}
+
+\bigskip
+
+\begin{flushleft}
+Quand on clique sur ce post on sera redirigé vers l’url qui a été entré pendant l’injection de code, donc ici notre forum préféré.
+\end{flushleft}
+
+\begin{center}
+\caption{XSS TYPE-1}
+\includegraphics[scale=0.3]{Web/assets/xssha.png}
+\end{center}
+
+\bigskip
 
 \subsection{XSS réfléchi (Reflected)}\label{vulnerabilites:web:xss:reflected}
 
