--- a/latex/Web/sqli.tex
+++ b/latex/Web/sqli.tex
@@ -18,15 +18,17 @@
 
 Les injections SQL (SQLi / SQL Injections) sont une vulnérabilité très fréquentes dans les applications web. Elles sont présentes lorsqu'une application utilise des valeurs entrées par l'utilisateur (par exemple dans un formulaire web, mais aussi dans les paramètres ou entetes HTTP, les cookies, etc.) pour construire des requetes SQL et les exécuter dans une base de données.
 
-Les injections SQL se décomposent en deux grandes familles :
 \begin{tabbing}
 \end{tabbing}
+Les injections SQL se décomposent en deux grandes familles :
 \begin{itemize}
 \item Les injections simples, qui seront utilisées lorsque les résultats des requtes peuvent etre affichés.
 \item Les injections en aveugle (blind), qui seront utilisés lorsque les résultats ne sont pas affichés.
 \end{itemize}
 
 
+\begin{tabbing}
+\end{tabbing}
 SQL est un langage très puissant permettant beaucoup de choses. Ainsi, une injection SQL peut permettre des vols, ajouts, modifications, suppressions de données, mais aussi la prise de contrôle du serveur SQL afin d'y exécuter des commandes systèmes.
 
 
