--- a/latex/Web/xss.tex
+++ b/latex/Web/xss.tex
@@ -42,6 +42,7 @@ Il existe trois types de failles XSS:
 \item Differentes actions sur le site comme la modification ou suppression de données , le vol de differentes données et la modification de l'apparence de la page
 \item La création d'une boucle infinie dans le but de rendre la lecture de la page difficile voire impossible
 \item L'injection de code permettant le redirection, le plus souvent dans le but de hamçonnage
+\end{itemize}
 
 \bigskip
 
